@@ -1,7 +1,7 @@
 Copyright (c) 2001, 2002 Rafal Wojtczuk <nergal at owl.openwall.com>
 Copyright (c) 2001 - 2003 Solar Designer <solar at owl.openwall.com>
 Copyright (c) 2001, 2003 - 2006, 2009, 2010, 2012, 2018, 2020 Dmitry V. Levin <ldv at owl.openwall.com>
-Copyright (c) 2021 Björn Esser <besser82 at fedoraproject.org>
+Copyright (c) 2021, 2024 Björn Esser <besser82 at fedoraproject.org>
 
 Additionally, some or all of the following copyright notices may apply
 to portions of pam_tcb and tcb_chkpwd:
